--- a/src/Coin.css
+++ b/src/Coin.css
@@ -7,7 +7,10 @@
     display: flex;
     flex-direction: row;
     height: 80px;
-    width: 1300px;
+    /* width: 1300px; */
+    width: 100%;
+        max-width: 1300px;
+        padding: 0 16px;
     align-items: center;
     justify-items: start;
     border-bottom: 1px solid #d7d7d7;
